# django-trainingmanager/urls.py
@@ -37,6 +37,7 @@ urlpatterns = [
     path("api/v1/", include("attendance.urls")),
     path("api/v1/", include("roti.urls")),
     path("api/v1/", include("level.urls")),
+    path("api/v1/", include("notifications.urls")),
     # OpenAPI schema + Swagger UI
     path("api/v1/schema/", SpectacularAPIView.as_view(), name="schema"),
     path("api/v1/docs/", SpectacularSwaggerView.as_view(url_name="schema"), name="swagger-ui"),
